<resources>
    <string name="app_name">TraNSit</string>
    <string name="tab_text_1">Rute</string>
    <string name="tab_text_2">Linije</string>
    <string name="tab_text_3">Stanice</string>
    <string name="start_point">Polazište</string>
    <string name="end_point">Odredište</string>
    <string name="search_button">PRETRAŽI</string>
    <string name="close_stops">Stanice u okolini</string>
    <string name="walk_time">Vreme pešačenja ~ %1$s</string>
    <string name="lines">Linije</string>
    <string name="last_routes">Poslednje rute</string>
    <string name="favorite_lines">Omiljene linije</string>
    <string name="favourite_locations">Omiljene lokacije</string>
    <string name="settings">Podešavanja</string>
    <string name="rate_us">Ocenite nas</string>
    <string name="about_us">O nama</string>
    <string name="drawer_open">Otvaranje</string>
    <string name="drawer_close">Zatvaranje</string>
    <string name="choose_on_map">Izaberi na mapi</string>
    <string name="choose_current_location">Izaberi trenutnu lokaciju</string>
    <string name="notifications">Notifikacije</string>
    <string name="navigation_notification">Notifikacije za navigaciju</string>
    <string name="navigation_notification_summary">Daje korisniku neophodne informacije u procesu navigacije</string>
    <string name="update_notification">Notifikacije o izlasku nove verzije aplikacije</string>
    <string name="update_notification_summary">Obaveštava korisnika o izlasku nove verzije aplikacije</string>
    <string name="sync">Sinhronizacija</string>
    <string name="sync_preference">Automatska sinhrozacija podataka</string>
    <string name="sync_preference_summary">Dozvoljava aplikaciji da sinhronizije podatke na mesečnom nivou ukoliko je internet dostupan</string>
    <string name="stations">Stanice</string>
    <string name="stations_radius">Radijus udaljenosti stanica</string>
    <string name="stations_radius_summary">Predstavlja radijus u kojem će se tražiti najbliže stanice u odnosu na lokaciju korisnika</string>
    <string name="about">O aplikaciji</string>
    <string name="app_version">Verzija aplikacije</string>
    <string name="version">1.2.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="stop_lines_header">Dostupne linije</string>
    <string name="show_timetable">Prikaži red vožnje</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="direction">smer</string>
    <string name="found_routes">Pronađene rute</string>
    <string name="departure_stop">Polazna stanica: %1$s</string>
    <string name="next_departure">Naredni polasci: %1$s</string>
    <string name="departure_time">Vreme polaska sa stanice: %1$s</string>
    <string name="total_price">" | Ukupna cena: %1$d"</string>
    <string name="minutes">min</string>
    <string name="timetable_tab1">Radni dan</string>
    <string name="timetable_tab2">Subota</string>
    <string name="timetable_tab3">Nedelja</string>
    <string name="navigation_process">Tok putovanja</string>
    <string name="start">od</string>
    <string name="end">do</string>
    <string name="action_remove">Ukloni sve</string>
    <string name="favourite_lines_removed_message">Uspešno ste obrisali sve vaše omiljene linije</string>
    <string name="remove_favourite_lines_dialog_title">Brisanje omiljenih linija</string>
    <string name="remove_favourite_lines_dialog_message">Da li ste sigurni da želite da uklonite sve vaše omiljene linije?</string>
    <string name="favourite_locations_removed_message">Uspešno ste obrisali sve vaše omiljene lokacije</string>
    <string name="remove_favourite_locations_dialog_title">Brisanje omiljenih lokacija</string>
    <string name="remove_favourite_locations_dialog_message">Da li ste sigurni da želite da uklonite sve vaše omiljene lokacije?</string>
    <string name="favourite_lines_header">Omiljene linije</string>
    <string name="location_search_hint">Unesite adresu ili lokaciju</string>
    <string name="location_not_found_message">Vaša trenutna lokacija nije uspešno pronađena</string>
    <string name="address_not_found_message">Adresa odabrane lokacije nije uspešno pronađena. Pokušajte ponovo</string>
    <string name="algolia_search_hits_key">hits</string>
    <string name="algolia_search_name_key">locale_names</string>
    <string name="locationNotChosenMessage">Niste odabrali lokaciju!</string>
    <string name="favourite_locations_header">Omiljene lokacije</string>
    <string name="places_list_header">Pronađene lokacije</string>
    <string name="no_internet_connection_message">Ups! Izgleda da internet konekcija nije dostupna.</string>
    <string name="favourite_location_title_hint">Naziv omiljene lokacije</string>
    <string name="save">Sačuvaj</string>
    <string name="favourite_location_name">Lokacija • %1$s</string>
    <string name="empty_favourite_location_title_message">Niste uneli naziv omiljene lokacije!</string>
    <string name="undo_snack_bar_text">Uklonili ste omiljenu lokaciju %1$s</string>
    <string name="undo_snack_bar">Opozovi</string>
    <string name="added_favourite_location_snack_bar_text">Dodali ste omiljenu lokaciju %1$s</string>
    <string name="dismiss_snack_bar">Zatvori</string>
    <string name="locations_not_available_message">Lokacije nisu trenutno dostupne</string>
    <string name="chosen_stop_error_message">Obabrana stanica ne može biti prikazana</string>
    <string name="location_permissions_not_available_message">Nismo u mogućnosti da preuzmemo vašu trenutnu lokaciju</string>
    <string name="favourite_line_added_message">Linija %1$s je uklonjena iz vaših omiljenih linija</string>
    <string name="favourite_line_deleted_message">Linija %1$s je dodata u vaše omiljene linije</string>
    <string name="route_not_chosen_message">Ruta nije izabrana!</string>
    <string name="action_add_favourite_location">Dodaj omiljenu lokaciju</string>
    <string name="field_is_required">%1$s je obavezno!</string>
    <string name="past_directions_lines_dialog_title">Brisanje istorije ruta</string>
    <string name="past_directions_lines_dialog_message">Da li ste sigurni da želite da uklonite vašu istoriju ruta?</string>
    <string name="past_directions_removed_message">Uspešno ste obrisali vašu istoriju ruta</string>
    <string name="past_directions_header">Poslednje rute</string>
    <string name="start_location_name">Polazište • %1$s</string>
    <string name="end_location_name">Odredište • %1$s</string>
    <string name="date">Datum • %1$s</string>
    <string name="city">Gradska linija</string>
    <string name="suburban">Prigradska linija</string>
    <string name="intercity">Međugradska linija</string>
    <string name="stations_radius_pref_key">stations_radius</string>
    <string name="loading_message">Učitavanje...</string>
    <string name="sync_preference_pref_key">sync_preference</string>
    <string name="loading_sync_message">Sinhronizacija podataka je u toku...</string>
    <string name="loading_sync_timetable_message">Sinhronizacija reda vožnje je u toku...</string>
    <string name="sync_is_available_message">Dostupan je novi red vožnje za %1$s</string>
    <string name="do_sync">Preuzmi</string>
    <string name="successful_sync_message">Sinhronizacija reda vožnje je uspešno obavljena</string>
    <string name="navigation_walk_message">Pešačite %1$s do</string>
    <string name="navigation_wait_bus_message">Sačekajte autobus na liniji</string>
    <string name="navigation_ride_stops_message">Zatim se vozite %1$s do</string>
    <string name="channel_id">Channel id</string>
    <string name="channel_name">Default priority channel</string>
    <string name="channel_description">Channel description</string>
    <string name="notification_content">Približavate se stanici. Spremite se da izađete</string>
    <string name="navigation">Navigacija</string>
    <string name="navigation_notification_pref_key">navigation_notification</string>
    <string name="service_active_pref_key">service_active</string>
    <string name="navigation_notifications_request_title">Notifikacije za navigaciju</string>
    <string name="navigation_notifications_request_message">Da li želite da uključite notifikacije za navigaciju?</string>
    <string name="navigation_already_exists_title">Navigacija je u toku</string>
    <string name="navigation_already_exists_message">Pokretanjem nove navigacije prekinućete postojeću. Da li želite da nastavite?</string>
    <string name="routes_count_search_option">Broj ruta</string>
    <string name="transfers_enabled_search_option">Presedanje</string>
    <string name="start_time_search_option">Vreme polaska</string>
    <string name="total_price_sort_label">Ukupna cena</string>
    <string name="total_duration_sort_label">Ukupno trajanje</string>
    <string name="next_departure_sort_label">Vreme polaska sa stanice</string>
    <string name="apply_sort_button_lable">Primeni</string>
    <string name="sort_dialog_title">Sortiranje ruta</string>
    <string name="route_search_options">Opcije</string>
    <string name="navigation_main_notification_content_text">U toku je proces navigacije...</string>
    <string name="navigation_main_notification_action_text">Završi proces navigacije</string>
    <string name="positive_answer">Da</string>
    <string name="negative_answer">Ne</string>
</resources>
