<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:text="26" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/minutes"
            tools:text="min" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/parts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/departure_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#99000000"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="10sp"
            android:text="@string/departure_stop"
            tools:text="Polazna stanica:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#99000000"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="10sp"
                android:text="@string/departure_time"
                tools:text="Vreme polaska sa stanice:" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#99000000"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="10sp"
                android:text="@string/total_price"
                tools:text=" | Ukupna cena:" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>