<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.DirectionsFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/start_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/end_point"
                android:backgroundTint="@color/edit_text_line"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/start_point"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/end_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/end_point"
                android:backgroundTint="@color/edit_text_line"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/end_point"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_route_settings"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_down_gray_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/route_search_options" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/route_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <include layout="@layout/routes_search_options" />
        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_round_primary"
            android:text="@string/search_button"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>